--- a/tron.yaml
+++ b/tron.yaml
@@ -30,13 +30,13 @@ sources:
     mapzen:
         type: TopoJSON
         #url: https://vector.mapzen.com/osm/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-uP4vdQc
-        url: http://tile.dev.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
+        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
         rasters: [normals-elevation]
         max_zoom: 16
     normals-elevation:
         type: Raster
         #url: https://s3.amazonaws.com/elevation-tiles-prod/normal/{z}/{x}/{y}.png
-        url: https://terrain-preview.mapzen.com/normal/{z}/{x}/{y}.png
+        url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
         max_zoom: 15
 
     # Only enable this for local debug, should not be enabled for prod (app inserts these at runtime)
