boundaries filter on kind only

--- a/layers/boundaries.yaml
+++ b/layers/boundaries.yaml
@@ -8,9 +8,7 @@ layers:
 
         country:
             filter:
-                any:
-                    - kind: country
-                    - kind_detail: 2
+                kind: country
             draw:
                 lines:
                     width: [[1, 0px], [3, 0px], [4, 1.5px], [9, 2.5px], [14, 3.5px], [16, 4.5px], [17, 14m]]
@@ -31,9 +29,7 @@ layers:
 
         region:
             filter:
-                any:
-                    - kind: [region]
-                    - kind_detail: 4
+                kind: region
             draw:
                 lines:
                     width: [[0, 0px], [4, 0px], [5, 0.5px], [6, 0.5px], [8, 1px], [14, 1.5px], [16, 3.0px], [17, 10m]]
