remove junk filter comments for landuse tiers

--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -51,26 +51,8 @@ layers:
 
 
 
-        stuff:
+        landuse-styling:
 #        tier1:
-#            filter:
-#                any:
-#                    # limit show smaller landuse areas to higher zooms
-#                    - { $zoom: { min: 3 },  area: { min: 300000000 } }
-#                    - { $zoom: { min: 4 },  area: { min: 300000000 } }
-#                    - { $zoom: { min: 5 },  area: { min: 150000000 } }
-#                    - { $zoom: { min: 6 },  area: { min: 150000000 } }
-#                    - { $zoom: { min: 7 },  area: { min: 100000000 } }
-#                    - { $zoom: { min: 8 },  area: { min: 10000000 } }
-#                    - { $zoom: { min: 9 },  area: { min: 5000000 } }
-#                    - { $zoom: { min: 10 }, area: { min: 1000000 } }
-#                    - { $zoom: { min: 11 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 12 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 13 }, area: { min: 100000 } }
-#                    - { $zoom: { min: 14 }, area: { min: 50000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 20000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 2000 } }
-#                    - { $zoom: { min: 16 } }
             national_park:
                 filter:
                     all:
@@ -94,23 +76,6 @@ layers:
                             color: [0.340,0.703,1.000]
                             visible: true
 #        tier2:
-#            filter:
-#                any:
-#                    # limit show smaller landuse areas to higher zooms
-#                    - { $zoom: { min: 4 },  area: { min: 1000000000 } }
-#                    - { $zoom: { min: 5 },  area: { min: 1000000000 } }
-#                    - { $zoom: { min: 6 },  area: { min: 150000000 } }
-#                    - { $zoom: { min: 7 },  area: { min: 100000000 } }
-#                    - { $zoom: { min: 8 },  area: { min: 10000000 } }
-#                    - { $zoom: { min: 9 },  area: { min: 5000000 } }
-#                    - { $zoom: { min: 10 }, area: { min: 1000000 } }
-#                    - { $zoom: { min: 11 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 12 }, area: { min: 250000 } }
-#                    - { $zoom: { min: 13 }, area: { min: 100000 } }
-#                    - { $zoom: { min: 14 }, area: { min: 50000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 20000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 2000 } }
-#                    - { $zoom: { min: 16 } }
             conservation:
                 filter:
                     all:
@@ -180,19 +145,6 @@ layers:
                             color: [0.238,0.529,0.820]
                             visible: true
 #        tier3:
-#            filter:
-#                any:
-#                    # limit show smaller landuse areas to higher zooms
-#                    - { $zoom: { min: 8 },  area: { min: 10000000 } }
-#                    - { $zoom: { min: 9 },  area: { min: 5000000 } }
-#                    - { $zoom: { min: 10 }, area: { min: 1000000 } }
-#                    - { $zoom: { min: 11 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 12 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 13 }, area: { min: 100000 } }
-#                    - { $zoom: { min: 14 }, area: { min: 50000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 20000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 2000 } }
-#                    - { $zoom: { min: 16 } }
             university:
                 filter:
                     kind: [university, college]
@@ -202,17 +154,6 @@ layers:
                         color: [0.212,0.302,0.427]
                         visible: true
 #        tier4:
-#            filter:
-#                any:
-#                    # limit show smaller landuse areas to higher zooms
-#                    - { $zoom: { min: 10 }, area: { min: 1000000 } }
-#                    - { $zoom: { min: 11 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 12 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 13 }, area: { min: 100000 } }
-#                    - { $zoom: { min: 14 }, area: { min: 50000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 20000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 2000 } }
-#                    - { $zoom: { min: 16 } }
             golf_course:
                 filter:
                     kind: golf_course
@@ -263,15 +204,6 @@ layers:
                             color: [[13,[0.212,0.302,0.427]],[16,[0.204,0.292,0.730]]]
                             visible: true
 #        tier6:
-#            filter:
-#                any:
-#                    # limit show smaller landuse areas to higher zooms
-#                    - { $zoom: { min: 12 }, area: { min: 500000 } }
-#                    - { $zoom: { min: 13 }, area: { min: 100000 } }
-#                    - { $zoom: { min: 14 }, area: { min: 50000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 20000 } }
-#                    - { $zoom: { min: 15 }, area: { min: 2000 } }
-#                    - { $zoom: { min: 16 } }
             parking:
                 filter:
                     kind: parking
