--- a/tron.yaml
+++ b/tron.yaml
@@ -29,13 +29,11 @@ import:
 sources:
     mapzen:
         type: TopoJSON
-        #url: https://vector.mapzen.com/osm/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-uP4vdQc
-        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
+        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-uP4vdQc
         rasters: [normals-elevation]
         max_zoom: 16
     normals-elevation:
         type: Raster
-        #url: https://s3.amazonaws.com/elevation-tiles-prod/normal/{z}/{x}/{y}.png
         url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
         max_zoom: 15
 
