--- a/tron.yaml
+++ b/tron.yaml
@@ -34,7 +34,7 @@ sources:
         max_zoom: 16
     normals-elevation:
         type: Raster
-        url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
+        url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png?api_key=mapzen-n22UFkv
         max_zoom: 15
 
     # Only enable this for local debug, should not be enabled for prod (app inserts these at runtime)
