mergy poppy flash mobs

--- a/components/globals.yaml
+++ b/components/globals.yaml
@@ -189,6 +189,7 @@ global:
     text_visible_roads: true
     text_visible_buildings: true
     text_visible_addresses: true
-    text_visible_pois_landuse: true
-    icon_visible_pois_landuse: true
+    text_visible_pois_landuse: true        # default false, all true
+    icon_visible_pois_landuse: true        # default false, all true
+    text_visible_landuse_generic: true     # default false, all true
     text_visible_island: true
