--- a/layers/places.yaml
+++ b/layers/places.yaml
@@ -179,7 +179,7 @@ layers:
                                 font:
                                     size: 18px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 priority: 5
@@ -200,7 +200,7 @@ layers:
                                     fill: [0.886,0.898,0.914]
                                     size: 13px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 priority: 9
@@ -221,7 +221,7 @@ layers:
                                     fill: [0.886,0.898,0.914]
                                     size: 10px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 priority: 15
@@ -244,7 +244,7 @@ layers:
                                     fill: white
                                     size: 18px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-l
@@ -265,7 +265,7 @@ layers:
                                     fill: white
                                     size: 13px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 6px
@@ -286,7 +286,7 @@ layers:
                                     fill: white
                                     size: 10px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 6px
@@ -309,7 +309,7 @@ layers:
                                     fill: white
                                     size: 18px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 8px
@@ -330,7 +330,7 @@ layers:
                                     fill: white
                                     size: 13px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 8px
@@ -351,7 +351,7 @@ layers:
                                     fill: white
                                     size: 11px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 6px
@@ -380,7 +380,7 @@ layers:
                                 font:
                                     size: 20px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 8px
@@ -401,7 +401,7 @@ layers:
                                 font:
                                     size: 15px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 6px
@@ -424,7 +424,7 @@ layers:
                                     fill: white
                                     size: 12px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 6px
@@ -447,7 +447,7 @@ layers:
                                     fill: [0.886,0.898,0.914]
                                     size: 10px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 5px
@@ -458,8 +458,8 @@ layers:
                         all:
                             - { population: { max: 50000 } }
                         any:
-                            - { country_capital: yes }
-                            - { region_capital: yes }
+                            - { country_capital: true }
+                            - { region_capital: true }
                     draw:
                         icons:
                             size: 5px
@@ -472,7 +472,7 @@ layers:
                                     fill: [0.886,0.898,0.914]
                                     size: 10px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 5px
@@ -495,7 +495,7 @@ layers:
             #                     font:
             #                         size: 16px
             #         capital:
-            #             filter: { country_capital: yes }
+            #             filter: { country_capital: true }
             #             draw:
             #                 icons:
             #                     size: 8px
@@ -514,7 +514,7 @@ layers:
                 #                 font:
                 #                     size: 13px
                 #     capital:
-                #         filter: { country_capital: yes }
+                #         filter: { country_capital: true }
                 #         draw:
                 #             icons:
                 #                 sprite: capital-m
@@ -532,7 +532,7 @@ layers:
                 #                 font:
                 #                     size: 11px
                 #     capital:
-                #         filter: { country_capital: yes }
+                #         filter: { country_capital: true }
                 #         draw:
                 #             icons:
                 #                 sprite: capital-s
@@ -589,7 +589,7 @@ layers:
                                     size: 15px
                                     fill: white
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-m
@@ -611,7 +611,7 @@ layers:
                                     size: 12px
                                     fill: white
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-m
@@ -637,7 +637,7 @@ layers:
                                     fill: [0.886,0.898,0.914]
                                     size: 10px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-s
@@ -647,8 +647,8 @@ layers:
                         all:
                             - { population: { max: 50000 } }
                         any:
-                            - { country_capital: yes }
-                            - { region_capital: yes }
+                            - { country_capital: true }
+                            - { region_capital: true }
                     draw:
                         icons:
                             size: 5px
@@ -661,7 +661,7 @@ layers:
                                     fill: [0.886,0.898,0.914]
                                     size: 10px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-s
@@ -702,7 +702,7 @@ layers:
                                     size: 16px
                                     fill: white
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-l
@@ -721,7 +721,7 @@ layers:
                                 font:
                                     size: 13px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-m
@@ -740,7 +740,7 @@ layers:
                                 font:
                                     size: 11px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-m
@@ -870,7 +870,7 @@ layers:
                                 font:
                                     size: 13px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 sprite: capital-m
@@ -890,7 +890,7 @@ layers:
                                     fill: [0.816,0.827,0.851]
                                     size: 12px
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             icons:
                                 size: 7px
@@ -980,7 +980,7 @@ layers:
                                 size: 16px
                                 #stroke: { color: global.text_stroke, width: 4 }
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             text:
                                 priority: 9
@@ -998,7 +998,7 @@ layers:
                                 size: 13px
                                 #stroke: { color: global.text_stroke, width: 4 }
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             text:
                                 priority: 11
@@ -1006,7 +1006,7 @@ layers:
                                     size: 16px
                                     #stroke: { color: global.text_stroke, width: 4 }
                     state_capital:
-                        filter: { region_capital: yes }
+                        filter: { region_capital: true }
                         draw:
                             text:
                                 priority: 12
@@ -1024,7 +1024,7 @@ layers:
                                 size: 10px
                                 #stroke: { color: global.text_stroke, width: 4 }
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             text:
                                 priority: 14
@@ -1130,7 +1130,7 @@ layers:
                                 size: 16px
                                 #stroke: { color: global.text_stroke, width: 4 }
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             text:
                                 priority: 11
@@ -1148,7 +1148,7 @@ layers:
                                 size: 13px
                                 #stroke: { color: global.text_stroke, width: 4 }
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             text:
                                 priority: 13
@@ -1166,7 +1166,7 @@ layers:
                                 size: 11px
                                 #stroke: { color: global.text_stroke, width: 4 }
                     capital:
-                        filter: { country_capital: yes }
+                        filter: { country_capital: true }
                         draw:
                             text:
                                 priority: 15
