--- a/styles/points.yaml
+++ b/styles/points.yaml
@@ -10,6 +10,31 @@ textures:
         filtering: mipmap
         sprites:
             # define sprites: [x origin, y origin, width, height]
+            'US:CA_1char': [0, 694, 84, 100]
+            'US:CA_2char': [852, 590, 100, 100]
+            'US:CA_3char': [0, 486, 116, 98]
+            'US:CA_4char': [796, 382, 124, 98]
+            'US:CA_5char': [660, 382, 128, 98]
+            'US:I_1char': [690, 694, 88, 100]
+            'US:I_2char': [0, 382, 100, 100]
+            'US:I_3char': [796, 278, 116, 100]
+            'US:I_4char': [664, 278, 124, 100]
+            'US:I_5char': [528, 278, 128, 100]
+            'US:NY_1char': [208, 590, 72, 88]
+            'US:NY_2char': [112, 590, 88, 88]
+            'US:NY_3char': [0, 590, 104, 88]
+            'US:NY_4char': [798, 488, 116, 86]
+            'US:NY_5char': [670, 488, 120, 86]
+            'US:PA_1char': [586, 486, 76, 88]
+            'US:PA_2char': [492, 486, 90, 90]
+            'US:PA_3char': [376, 486, 108, 88]
+            'US:PA_4char': [252, 486, 120, 88]
+            'US:PA_5char': [124, 486, 122, 88]
+            'US:US_1char': [594, 694, 88, 100]
+            'US:US_2char': [480, 694, 106, 100]
+            'US:US_3char': [358, 694, 118, 100]
+            'US:US_4char': [226, 694, 126, 100]
+            'US:US_5char': [90, 694, 128, 100]
             airport: [0, 76, 36, 36]
             aerodrome: [0, 76, 36, 36]
             airport-xl: [908, 0, 72, 72]
@@ -32,7 +57,7 @@ textures:
             bank: [178, 236, 36, 36]
             bar: [444, 236, 36, 36]
             pub: [444, 236, 36, 36]
-            baseball-field: [625, 118, 36, 36]
+            baseball-field: [624, 118, 36, 36]
             basketball-court: [580, 118, 36, 36]
             beach: [758, 118, 36, 36]
             beer-garden: [442, 278, 36, 36]
@@ -76,11 +101,11 @@ textures:
             candy-store: [178, 278, 36, 36]
             candy: [178, 278, 36, 36]
             confectionery: [178, 278, 36, 36]
-            capital-l: [676, 278, 18, 18]
-            capital-m: [654, 278, 14, 14]
-            capital-s: [634, 280, 10, 10]
-            capital-xl: [730, 278, 22, 22]
-            capital-xs: [620, 280, 8, 8]
+            capital-l: [934, 694, 18, 18]
+            capital-m: [912, 694, 14, 14]
+            capital-s: [892, 696, 10, 10]
+            capital-xl: [988, 694, 22, 22]
+            capital-xs: [878, 696, 8, 8]
             car-dealership: [0, 236, 36, 36]
             car: [0, 236, 36, 36]
             castle: [536, 76, 36, 36]
@@ -101,6 +126,11 @@ textures:
             convenience: [180, 118, 36, 36]
             convenience_store: [180, 118, 36, 36]
             beverages: [180, 118, 36, 36]
+            county_shield_1char: [580, 382, 72, 72]
+            county_shield_2char: [484, 382, 88, 72]
+            county_shield_3char: [372, 382, 104, 72]
+            county_shield_4char: [244, 382, 120, 72]
+            county_shield_5char: [108, 382, 128, 72]
             courthouse: [348, 0, 36, 36]
             department-store: [936, 160, 36, 36]
             department_store: [936, 160, 36, 36]
@@ -134,9 +164,14 @@ textures:
             garden: [802, 118, 36, 36]
             gas-station: [134, 278, 36, 36]
             fuel: [134, 278, 36, 36]
-            generic: [574, 278, 36, 36]
-            subway_entrance: [574, 278, 36, 36]
+            generic: [832, 694, 36, 36]
+            subway_entrance: [832, 694, 36, 36]
             generic-sport: [522, 160, 36, 36]
+            generic_shield_1char: [288, 590, 72, 72]
+            generic_shield_2char: [756, 590, 90, 72]
+            generic_shield_3char: [644, 590, 104, 72]
+            generic_shield_4char: [516, 590, 120, 72]
+            generic_shield_5char: [368, 590, 140, 72]
             gift-shop: [218, 160, 36, 36]
             gift: [218, 160, 36, 36]
             golf-course: [534, 118, 36, 36]
@@ -166,8 +201,8 @@ textures:
             hostel: [776, 0, 36, 36]
             ice-cream-shop: [484, 278, 36, 36]
             ice_cream: [484, 278, 36, 36]
-            information: [528, 278, 36, 36]
-            info: [528, 278, 36, 36]
+            information: [786, 694, 36, 36]
+            info: [786, 694, 36, 36]
             jewelry-store: [852, 76, 36, 36]
             jewelry: [852, 76, 36, 36]
             jewelry_store: [852, 76, 36, 36]
@@ -276,7 +311,7 @@ textures:
             sports: [136, 76, 36, 36]
             outdoor: [136, 76, 36, 36]
             spring: [444, 118, 36, 36]
-            stadium: [661, 160, 36, 36]
+            stadium: [660, 160, 36, 36]
             subway-entrance: [516, 0, 36, 36]
             synagogue: [44, 0, 36, 36]
             tailor-shop: [90, 76, 36, 36]
@@ -286,16 +321,16 @@ textures:
             theme_park: [88, 160, 36, 36]
             miniature_golf: [88, 160, 36, 36]
             toilets: [978, 118, 36, 36]
-            townspot-l: [934, 278, 18, 18]
-            townspot-l-rev: [816, 278, 24, 24]
-            townspot-m: [912, 278, 14, 14]
-            townspot-m-rev: [790, 278, 20, 20]
-            townspot-s: [892, 278, 12, 12]
-            townspot-s-rev: [772, 278, 12, 12]
-            townspot-xl: [960, 278, 22, 22]
-            townspot-xl-rev: [846, 280, 20, 20]
-            townspot-xs: [874, 278, 10, 10]
-            townspot-xs-rev: [758, 280, 6, 6]
+            townspot-l: [176, 798, 18, 18]
+            townspot-l-rev: [56, 798, 24, 24]
+            townspot-m: [154, 798, 14, 14]
+            townspot-m-rev: [32, 798, 20, 20]
+            townspot-s: [134, 798, 12, 12]
+            townspot-s-rev: [14, 798, 12, 12]
+            townspot-xl: [202, 798, 22, 22]
+            townspot-xl-rev: [88, 800, 20, 20]
+            townspot-xs: [116, 798, 10, 10]
+            townspot-xs-rev: [0, 800, 6, 6]
             toy-game-store: [44, 76, 36, 36]
             toys: [44, 76, 36, 36]
             baby_goods: [44, 76, 36, 36]
@@ -305,23 +340,23 @@ textures:
             station: [472, 0, 36, 36]
             train-staion: [472, 0, 36, 36]
             train-station-xl: [392, 0, 72, 72]
-            ux-current-location: [294, 320, 88, 88]
-            current-location: [294, 320, 88, 88]
-            ux-locate-off: [628, 320, 72, 72]
-            locate-off: [628, 320, 72, 72]
-            ux-locate-on: [548, 320, 72, 72]
-            locate-on: [548, 320, 72, 72]
-            ux-route-arrow: [0, 320, 128, 128]
-            route-arrow: [0, 320, 128, 128]
-            ux-route-start: [214, 320, 72, 92]
-            route-start: [214, 320, 72, 92]
-            ux-route-stop: [136, 320, 72, 92]
-            route-stop: [136, 320, 72, 92]
-            ux-search-active: [388, 320, 72, 108]
-            search-active: [388, 320, 72, 108]
-            ux-search-inactive: [468, 320, 72, 108]
-            search-inactive: [468, 320, 72, 108]
-            ux-transit-stop: [702, 278, 20, 20]
+            ux-current-location: [526, 798, 88, 88]
+            current-location: [526, 798, 88, 88]
+            ux-locate-off: [860, 798, 72, 72]
+            locate-off: [860, 798, 72, 72]
+            ux-locate-on: [780, 798, 72, 72]
+            locate-on: [780, 798, 72, 72]
+            ux-route-arrow: [232, 798, 128, 128]
+            route-arrow: [232, 798, 128, 128]
+            ux-route-start: [446, 798, 72, 92]
+            route-start: [446, 798, 72, 92]
+            ux-route-stop: [368, 798, 72, 92]
+            route-stop: [368, 798, 72, 92]
+            ux-search-active: [620, 798, 72, 108]
+            search-active: [620, 798, 72, 108]
+            ux-search-inactive: [700, 798, 72, 108]
+            search-inactive: [700, 798, 72, 108]
+            ux-transit-stop: [960, 696, 20, 20]
             veterinarian: [132, 0, 36, 36]
             pet_care: [132, 0, 36, 36]
             veterinary: [132, 0, 36, 36]
